--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -125,11 +125,10 @@
    "metadata": {},
    "source": [
     "## Explore\n",
-    "Split the data into train, validate, and test datasets.\n",
     "\n",
     "Using bivariate method from explore.py, churning rates against categorical variables were analyzed\n",
     "\n",
-    "Excluded features that have similar churn rate for yes and no, i.e. phone_services, multiple_lines, is_male(gender)\n",
+    "Excluded the features that have similar churn rate for yes and no, i.e. phone_services, multiple_lines, is_male(gender)\n",
     "\n",
     "\n",
     "Features | churn rate for no | churn rate for yes\n",
@@ -158,14 +157,19 @@
    "metadata": {},
    "source": [
     "Looking at the churn rate, I will pick the ones with more than 40% of churn rate <br>\n",
-    "and do stats assessment to see if there is a correlation.<br>\n",
+    "and do stats assessment to see if the correlations are valid.<br>\n",
     "\n",
     "Those are... <br>\n",
     "-electronic check payment type,<br>\n",
     "-fiber optic internet service type,<br>\n",
     "-month-to-month contract type,<br>\n",
     "-senior citizen\n",
-    "\n"
+    "\n",
+    "Also, the differences between churn_yes and churn_no were taken into my analysis, <br>\n",
+    "since insignificant differences indicate that the features do not play a role in driving the churn rate. <br>\n",
+    "Those are...<br>\n",
+    "-paperless_billing<br>\n",
+    "-dependents<br>"
    ]
   },
   {
@@ -453,15 +457,19 @@
    "metadata": {},
    "source": [
     "Takeaways\n",
-    "From the above table, one can assume that customers who fall under the catgories of... <br>\n",
-    "no partner, <br>\n",
-    "no dependent, <br>\n",
-    "no addtional services (online security, backup, protection, tech support) <br>\n",
-    "paperless billing,<br>\n",
-    "senior citizen,<br>\n",
-    "month-to-month contract type,<br>\n",
-    "fiber optic internet service type,<br>\n",
-    "electronic check payment type"
+    "\n",
+    "From the above table and the stats test, one can assume that customers who fall under the catgories of... <br>\n",
+    "-no partner, <br>\n",
+    "-no dependent, <br>\n",
+    "-no addtional services (online security, backup, protection, tech support) <br>\n",
+    "-enrolled in paperless billing,<br>\n",
+    "-is senior citizen,<br>\n",
+    "-enrolled in month-to-month contract type,<br>\n",
+    "-enrooled in fiber optic internet service type,<br>\n",
+    "-enrolled in electronic check payment type<br>\n",
+    "\n",
+    "are likely to churn.\n",
+    "\n"
    ]
   },
   {
@@ -611,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -631,8 +639,8 @@
     }
    ],
    "source": [
-    "pred_test = logit.predict(X_test)\n",
-    "print(classification_report(y_test, pred_test))"
+    "y_pred = logit.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred, output_dict=False))"
    ]
   },
   {
@@ -793,18 +801,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "proba_df = pd.DataFrame(logit.predict_proba(X_test), columns= ['no_churn_proba', 'churn_proba'])\n",
-    "proba_df.drop(columns='no_churn_proba', inplace= True)\n"
+    "proba_df.drop(columns='no_churn_proba', inplace= True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +884,7 @@
        "4  1273-MTETI           1     0.781126"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +917,7 @@
     "## Summary\n",
     "Key drivers for the churning were identified and models were developed. Logistic regression predicted the best out of other models used. The logistic regression model was used as the difference in train and validate dataset was the lowest. The model was able to predict the churn rate at a 80.62% accuracy level on a test dataset. This is greater than the baseline accuracy level, which is 73.47%.\n",
     "\n",
-    "Question on the correlation between the bivariate category variables and the churn rate were observed, and were found that the correlation exists in churn rate against demographies, additional services, contract type, payment type, and internet service type.\n",
+    "Question on the correlation between the  category variables and the churn rate were observed, and were found that the correlation exists in churn rate against demographies, additional services, contract type, payment type, and internet service type.\n",
     "\n",
     "## Key drivers for churning are:\n",
     "\n",
@@ -923,8 +930,9 @@
     "\n",
     "## Recommendation:\n",
     "Even though fiber optic is more high tech than DSL, its churn rate is high. There may be an issue with the technology.\n",
-    "Senior citizens or customers with no dependents are more likely to churn; hence, programs aimed towards those group should be devised.\n",
-    "Payment type of electronic check churn at high rate. It is a non-automatic payment method, and they should be given incentives to switch to automatic payment.\n",
+    "Conduct survey on fiber optic users, and find issues.\n",
+    "Senior citizens or customers with no dependents are more likely to churn; hence, programs aimed towards those group should be considered.\n",
+    "Payment type of electronic check churn at high rate. It is a non-automatic payment method, and automatic payment option should be provided.\n",
     "Month-to-month customers churns the most out of other contract type, and there should be incentives for the short-term contracts.\n",
     "\n",
     "## Next Step:\n",
