--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -915,9 +915,9 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "Key drivers for the churning were identified and models were developed. Logistic regression predicted the best out of other models used. The logistic regression model was used as the difference in train and validate dataset was the lowest. The model was able to predict the churn rate at a 80.62% accuracy level on a test dataset. This is greater than the baseline accuracy level, which is 73.47%.\n",
+    "Key drivers for the churning were identified and models were developed. Logistic regression predicted the best out of other models used. The logistic regression model was used because the difference in train and validate dataset was the lowest. The model was able to predict the churn rate at a 80.62% accuracy level on a test dataset. This is greater than the baseline accuracy level, which is 73.47%.\n",
     "\n",
-    "Question on the correlation between the  category variables and the churn rate were observed, and were found that the correlation exists in churn rate against demographies, additional services, contract type, payment type, and internet service type.\n",
+    "Question on the correlation between the  category variables and the churn rate were answered, and were found that the correlation exists in churn rate against demographies, contract type, payment type, and internet service type.\n",
     "\n",
     "## Key drivers for churning are:\n",
     "\n",
